fix: Add word wrap to one line code

--- a/assets/scss/components/_doks.scss
+++ b/assets/scss/components/_doks.scss
@@ -10,6 +10,7 @@ Doks — based on Ascetic by (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Org>
   padding: 1.25rem 1.5rem;
   background: $beige;
   color: $body-color;
+  word-wrap: normal;
 }
 
 .hljs-string,
